Fix checkbox alignment in merged conversation rows

--- a/main/data/style.css
+++ b/main/data/style.css
@@ -56,8 +56,12 @@ window.dino-main .dino-conversation .has-skeleton {
     margin-top: 10px;
 }
 
-window.dino-main .dino-conversation .message-box:not(.has-skeleton) {
-    padding-left: 58px;
+window.dino-main .dino-conversation .message-box:not(.has-skeleton) .conversation-meta-item {
+    margin-left: 43px;
+}
+
+window.dino-main .dino-conversation .select {
+    margin-right: 3px;
 }
 
 window.dino-main .unread-count-notify {
